--- a/web/styles.css
+++ b/web/styles.css
@@ -1,514 +1,205 @@
-
-body {
-    background-color: #f1f1f1;
-    color: #444;
-    height: 100%;
+html {
+	width: 100%;
+	height: 100%;
+	background-image: linear-gradient(to bottom right, #013c4a 0, #193e4c 44%, #004b5b 100%);
+	color: #fff;
+	font-family: GeoSlb712MdBT, Georgia, serif;
+	font-style: normal;
+    font-size: 100%;
     margin: 0px;
     padding: 0px;
-    font-family: "Open Sans","sans-serif";
-    font-size: 13px;
-    line-height: 1.4em;
 }
-body.white {
-	background-color: white;
+.window {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
-
-.registerform fieldset {
-	border: 1px solid #ddd;
+.centerbox {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
 }
-
-#login, #logout, #register, #userphotouploadview, .menubuttonlist, #pwchange, #solaregview {
-    width: 440px;
-    padding: 8% 0 0;
-    margin: auto;
-	margin-bottom: 50px;
+#user-reg,
+#save-verse {
+	width: 27rem;
+	height: 13.5rem;
 }
-
-.menubuttonlist {
-	font-size: 18px;
+.title {
+	padding: 5px; /* 0.3125rem */
+	font-size: 2.5em;
 	text-align: center;
+	margin-bottom: 1rem;
 }
-
-.menubutton {
-	font-size: 18px;
-	width: 420px;
-	margin: 10px auto;
-	padding: 10px 10px;
-	border-radius: 20px;
-	border-color: #bbb;
-	border-width: 1px;
-	color: #666;
-	background-image: linear-gradient(#e5e5e5 0%, #efefef 35%, #c5c5c5 100%);
-	outline: 0 none;
-}
-
-.menubutton:active {
-	border-color: #999;
-	color: #333;
-	background-image: linear-gradient(#d5d5d5 0%, #dfdfdf 65%, #b5b5b5 100%);
-}
-
-#forgetpw, #backtoblog, #register {
-	padding: 10px 24px 0px 24px;
-}
-
-.solalogo {
-    background-image: url(img/solalogo.png);
-	width: 341px;
-	height: 157px;
-	margin: 30px auto 0px;
-}
-
-#errtext {
-	padding-bottom: 10px;
-	font-size: 16px;
-	font-weight: bold;
+.message {
 	text-align: center;
-	color: #DD3300;
+	font-size: 1.25em;
+	/* margin-bottom: 1.5rem; */
+	color: #ffcc44;
 }
-
-#infotext, #lteam {
-	padding-bottom: 10px;
-	font-size: 18px;
-	text-align: left;
-	color: #6D8766;
+.sub-title {
+	padding: 5px; /* 0.3125rem */
+	font-size: 1.25em;
+	text-align: right;
 }
-
-#lteam {
-	font-family: "Comic-Sans","Open Sans","sans-serif";
-	font-size: 18px;
-}
-
-#registerheadline {
-	text-align: center;
-	padding-bottom: 10px;
-	color: #999;
-	font-size: 18px;
-}
-
-#login p, #register p, #register div {
-	-webkit-margin-before: 0px;
-	-webkit-margin-after: 0px;
-	line-height: 1.5;
-}
-
-#login p label, #register p label, .fieldsettitle, #register div label {
-	color: #777;
-	font-size: 15px;
-	cursor: pointer;
-}
-
-#login a, #forgetpw a, #backtoblog a, #register a, .pseudolink {
-	text-decoration: none;
-	color: #999;
-}
-
-#infotext > a {
-	color: #DD3300;
-	font-weight: bold;
-}
-
-.pseudolink {
-	cursor: pointer;
-}
-
-.loginform, .registerform, .pwchangeform {
-	padding: 26px 24px 46px;
-	background-color: #fff;
-	font-weight: 400;
-}
-
-.inputlogin, .inputregister, .optionregister, .textarearegister, .checkregister {
-	background-color: #fbfbfb;
-	border: 1px solid #ddd;
-	font-size: 20px;
-	padding: 3px;
-	margin: 2px 6px 16px 0px;
-	width: 100%;
-}
-
-.textarearegister {
-	font-size: 14px;
-	font-family: Arial;
-	width: 392px;
-	height: 128px;
-	resize: none;
-}
-
-#user_arrival, #user_departure, .checkregister {
-	font-size: 16px;
-}
-
-#login .button, #register .button, #userregview .button, #userphotouploadview #abort, #pwchange .button, #solaregview .button {
-	height: 30px;
-	line-height: 28px;
-	padding: 0px 12px 2px;
-	vertical-align: baseline;
-	float: right;
+.sub-title > a {
 	color: #fff;
-	background-color: #0085ba;
-	border-color: #0073aa #006799 #006799;
-	border-width: 1px;
-	border-style: solid;
-	border-radius: 3px;
-	box-shadow: 0 1px 0 #006799;
 	text-decoration: none;
-	text-shadow: 0 -1px 1px #006799,1px 0 1px #006799,0 1px 1px #006799,-1px 0 1px #006799;
-	font-size: 13px;
+}
+.red {
+    color: #DD3300;
 }
 
-#solaregview .button {
-	float: left;
+form {
+	width: 100%;
+	margin: auto;
+	margin-top: 2.5rem;
 }
-
-#userregview .button, #userphotouploadview #abort {
-	float: none;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: 5px;
+#input-email,
+#input-verse {
+	margin-top: 1rem;
+	border: none;
+	border-bottom: 1px solid #C5C6C6;
+	border-radius: 0px;
+    color: #C5C6C6;
 }
-
-#abort {
-	margin-right: 30px;
+.input-label {
+    position: absolute;
+    left: 0.5rem;
+    bottom: 0.9rem;
+    color: #898989;
+    font-size: 14pt;
+    transition: bottom 0.15s ease-out, color 0.15s ease-out, font-size 0.15s ease-out;
 }
-
-#login .button:active, #register .button:active, #userregview .button:active, #userphotouploadview #abort:active, #pwchange .button:active, #solaregview .button:active {
-	border-color: #005377 #003766 #003766;
-	color: #ccc;
-	background-color: #00558a;
+.input-frame.labelup > .input-label {
+    bottom: 3.4rem;
+	font-size: 10pt;
 }
-
-.inputregister.mandatory, .optionregister.mandatory, .checkregister.mandatory, .textarearegister.mandatory {
-	background-color: #fbffa0;
+.input-frame {
+    position: relative;
+    width: 100%;
+    margin-top: 0.5rem;
 }
-
-#userregview {
-	margin: 0px 30px;
+.input-frame > #input-email,
+.input-frame > #input-verse {
+	width: calc(100% - 1rem);
+    height: 2.5rem;
+    margin: auto;
+	padding-left: 0.5rem;
+	padding-right: 0.5rem;
+    font-size: 14pt;
+    font-style: normal;
+    background-color: transparent!important;
+    position: relative;
+    box-sizing: content-box;
 }
-
-.userreglist {
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active {
+    /*box-shadow: 0 0 0 30px transparent inset !important; funktioniert nicht */
+    box-shadow: 0 0 0 30px #16586B inset !important; /* #114251 */
+    /*background-color: transparent; funktioniert nicht */
+    -webkit-text-fill-color: #C5C6C6 !important;
+    border: none!important;
 }
-
-.userreglist .userreg {
-	width: 400px;
-	height: 100px;
-	border: 1px solid #0073aa;
-	border-radius: 5px;
-	padding: 3px;
-	margin: 5px;
-	display: inline-block;
-	vertical-align: top;
-}
-
-.userreglist .userreg_photo {
-	width: 100px;
-	height: 100px;
-	display: inline-block;
-	margin-right: 20px;
-}
-
-.userreglist .userreg_photo > img {
-    display: block;
-    max-width:100px;
-    max-height:100px;
-    width: auto;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.userreglist .userreg_data {
-	display: inline-block;
-	vertical-align: top;
-	max-width: 275px;
-}
-
-.userreglist .userreg_name {
-	margin-top: 5px;
-	font-size: 16pt;
-	font-weight: bold;
-}
-
-.userreglist .userreg_dob {
-	margin-top: 4px;
-}
-
-.userreglist .userreg_addr {
-	margin-top: 10px;
-	max-width: 275px;
-	white-space: nowrap;
-	overflow: hidden;
-	text-overflow: ellipsis;
-}
-
-.userreglist .userreg_phone {
-	margin-top: 6px;
-	display: inline-block;
-	max-width: 90px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	margin-right: 10px;
-}
-
-.userreglist .userreg_email {
-	margin-top: 6px;
-	display: inline-block;
-	max-width: 170px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-}
-
-.userreglist .userreg_sola {
-	display: none;
-	width: 407px;
-	margin-left: -5px;
-	background-color: #f8f8f8;
-	border: 1px solid #0073aa;
-	border-radius: 5px;
-	position: relative;
-}
-
-.userreglist .solaregitem {
-	margin: 5px;
-}
-
-.userreglist .solaregitemlbl {
-}
-
-.userreglist .solaregitemval {
-	padding: 2px;
-	border: 1px inset;
-	background-color: #f1f1f1;
-}
-/*
-.userregtable {
-	display: table;
-	border-collapse:collapse; 
-}
-
-.userregtable .userreg {
-	display: table-row;
-}
-
-.userregtable .userreg_photo {
-	display: none;
-}
-
-.userregtable .userreg_photo > img {
-    display: none;
-}
-
-.userregtable .userreg_data {
-}
-
-.userregtable .userreg_name, .userregtable .userreg_dob, .userregtable .userreg_addr, .userregtable .userreg_phone, 
-.userregtable .userreg_email, .userregtable .solaregitem {
-	display: table-cell;
-}
-
-.userregtable .userreg_sola {
-}
-
-.userregtable .solaregitemlbl {
-	display: none;
-}
-
-.userregtable .solaregitemval {
-}
-*/
-.userbox {
-	margin: 20px 10px 10px 30px;
-	position: absolute;
-}
-
-.userbox_photo {
-	width: 120px;
-	height: 120px;
-	display: inline-block;
-	margin-right: 5px;
-}
-
-.userbox_photo > img {
-    display: block;
-    max-width:120px;
-    max-height:120px;
-    width: auto;
-    height: auto;
-}
-
-#ublist1 {
-	display: inline-block;
-	vertical-align: top;
-	font-size: 18px;
-	line-height: 1.4em;
-	margin-top: 10px;
-}
-
-#ublist2 {
-	margin-top: 5px;
-}
-
-#solaregview {
-}
-
-#solareg {
-	margin-top: 60px;
-	border: 1px solid #888;
-	background-color: #f8f8f8;
-}
-
-.myregitem {
-	margin: 10px;
-}
-
-.myregitemlbl {
-	/**/
-}
-
-.myregitemval {
-	padding: 2px;
-	border: 1px inset;
-	background-color: #f1f1f1;
-	font-size: 16px;
-}
-
-.userdatatable {
-	background-color: #f8f8f8;
-}
-
-.userdatatable th {
-	background-color: #005377;
-	color: #f8f8f8;
-	font-weight: bold;
-	padding: 4px;
-}
-
-.userdatatable tr {
-	background-color: #f0f0f0;
+.button {
+	width: 100%;
+	height: 3.125rem; /* 50px; */
+	margin: auto;
 	text-align: center;
-	padding: 4px;
+	margin-top: 0.625rem; /* 10px; */
+	background-color: #1B6A82; /* dunkler: #082128 oder heller: #1B6A82 */
+	color: #C5C6C6;
+	font-size: 15pt;
+	outline: none;
+	border: none;
+	border-radius: 3px;
+}
+.button:hover {
+	background-color: #16586B;
 }
 
-.userdatatable tr:nth-child(even) {
-	background-color: #f8f8f8;
-}
 
-.userdatatable td.UserPicturePath img {
-	width: 35px;
-	height: 35px;
+@media screen and (max-width: 750px) {
+	.title {
+		font-size: 1.75em;
+	    margin-bottom: 0.8rem;
+	}
+	.message {
+		font-size: 0.9em;
+	}
+	.sub-title {
+		font-size: 0.9em;
+	}
+	form {
+		margin-top: 1.8rem;
+	}
+	#user-reg,
+	#save-verse {
+		width: 19rem; /* 70% */
+		height: 10rem; /* 70% */
+	}
+	.input-label {
+		bottom: 0.7rem;
+		font-size: 11pt;
+		/* TODO: width, height, margin, bottom etc. */
+	}
+	.input-frame.labelup > .input-label {
+		bottom: 2.5rem;
+		font-size: 8pt;
+	}
+	.input-frame > #input-email,
+    .input-frame > #input-verse	{
+		height: 1.75rem;
+		font-size: 10pt;
+		/* TODO: width, height, margin, bottom etc. */
+	}
+	.button {
+		height: 2.2rem;
+		font-size: 11pt;
+	}
 }
-
-.LockedUntil > .button {
-	margin: 3px;
-}
-
-td.Description {
-	text-align: left;
-	padding-left: 10px;
-}
-
-select.preselect option.selected {
-	background-color: #CCFFCC;
-}
-
-/* Table-Export */
-.tnContainer {
-	width: 94rem; /* 106.25rem; /* 1700px */
-	margin: 3.125rem auto 1.25rem auto; /* 50px auto 20px auto */
-	padding: 0;
-}
-.tnTable {
-	border-collapse:collapse;
-	border: 1px solid #888;
-	cellpadding: 1px; /* 0.0625rem */
-	cellspacing: 1px;
-	font-size: small;
-}
-.tnRowBody, .tnRowHead {
-	border: 1px solid #888;
-	font-size: 0.625rem;
-}
-.tnRowBody.light {
-	background-color: #ccc;
-}
-.tnRowBody.inform {
-	background-color: #FFB677;
-}
-.tnRowBody.warn {
-	background-color: #FFA199;
-}
-.tnCell {
-	margin: 1px;
-	padding: 0.125rem; /* 2px */
-	border: 1px solid #888;
-}
-.tnCellHead {
-	background-color: #ddd;
-}
-.tnCellBody .tnCellHead {
-	font-weight: normal;
-}
-.tnCellBody.id {
-	width: 6rem; /* 80px */
-	text-align: center;
-}
-.tnCellBody.name {
-	width: 9rem; /* 11.25rem; /* 180px */
-}
-.tnCellBody.date {
-	width: 5rem; /* 80px; */ /* old: 8.125rem; /* 130px */
-	text-align: center;
-}
-.tnCellBody.sex {
-	width: 3.125rem; /* 50px */
-	text-align: center;
-}
-.tnCellBody.address {
-	width: 18rem; /* 19.375rem; /* 310px */
-}
-.tnCellBody.phone {
-	width: 7rem; /* 8.125rem; /* 130px */
-}
-.tnCellBody.email {
-	width: 11rem; /* 13.125rem; /* 210px */
-}
-.tnCellBody.confession {
-	width: 10rem; /* 13.75rem; /* 220px */
-	white-space: pre-wrap;
-}
-.tnCellBody.congregation {
-	width: 20rem; /* 27.5rem; /* 440px */ /* old: 390px */
-	white-space: pre-wrap;
-}
-.tnCellBody.button, .tnCellBody.button > button {
-	width: 4.875rem;
-	font-size: 0.625rem;
-	font-weight: normal;
-	text-align: center;
-}
-#tnRegListAbort {
-	position: absolute;
-	top: 20px;
-	left: 10px;
-	font-size: 10px;
-}
-#tnRegListExport {
-	position: absolute;
-	top: 20px;
-	left: 70px;
-	font-size: 10px;
-}
-
-#tnTableCount {
-	position: absolute;
-	top: 20px;
-	left: 200px;
-	font-size: 0.625rem;
-}
-
-.tnSearchField {
-	display: inline-block;
-	margin: 0px 2px 0px 5px;
-	font-size: 0.625rem;
+@media screen and (max-width: 500px) {
+	.title {
+		font-size: 1.2em;
+	    margin-bottom: 0.6rem;
+	}
+	.message {
+		font-size: 0.7em;
+	}
+	.sub-title {
+		font-size: 0.7em;
+	}
+	form {
+		margin-top: 1.25rem;
+	}
+	#user-reg,
+	#save-verse {
+		width: 13.5rem; /* 70% */
+		height: 8.5rem; /* 70% */
+	}
+	.input-label {
+		bottom: 0.6rem;
+		font-size: 8pt;
+		/* TODO: width, height, margin, bottom etc. */
+	}
+	.input-frame.labelup > .input-label {
+		bottom: 1.8rem;
+		font-size: 6pt;
+	}
+	.input-frame > #input-email,
+    .input-frame > #input-verse {
+		height: 1.225rem;
+		font-size: 7pt;
+		/* TODO: width, height, margin, bottom etc. */
+	}
+	.button {
+		height: 1.56rem;
+		font-size: 8pt;
+	}
 }
