--- a/web/styles.css
+++ b/web/styles.css
@@ -54,9 +54,15 @@ html {
     color: #DD3300;
 }
 
-form {
+form.vertical{
 	width: 100%;
 	margin: auto;
+	margin-top: 2.5rem;
+}
+form.horizontal {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 	margin-top: 2.5rem;
 }
 #input-email,
@@ -70,19 +76,24 @@ form {
 .input-label {
     position: absolute;
     left: 0.5rem;
-    bottom: 0.9rem;
+    top: 0.8rem;
     color: #898989;
     font-size: 14pt;
-    transition: bottom 0.15s ease-out, color 0.15s ease-out, font-size 0.15s ease-out;
+    transition: top 0.15s ease-out, color 0.15s ease-out, font-size 0.15s ease-out;
 }
 .input-frame.labelup > .input-label {
-    bottom: 3.4rem;
+    top: -1.3rem;
 	font-size: 10pt;
 }
-.input-frame {
+.vertical > .input-frame {
     position: relative;
     width: 100%;
     margin-top: 0.5rem;
+}
+.horizontal > .input-frame {
+    width: 45%;
+    flex: 0 1 auto;
+    position: relative;
 }
 .input-frame > #input-email,
 .input-frame > #input-verse {
@@ -107,18 +118,35 @@ input:-webkit-autofill:active {
     -webkit-text-fill-color: #C5C6C6 !important;
     border: none!important;
 }
+select.select-verse {
+    width: 100%;
+    background-color: transparent!important;
+}
+option.option-vers {
+    font-size: 14pt;
+    font-style: normal;
+    background-color: transparent!important;
+    color: #C5C6C6;
+}
 .button {
-	width: 100%;
-	height: 3.125rem; /* 50px; */
-	margin: auto;
 	text-align: center;
-	margin-top: 0.625rem; /* 10px; */
 	background-color: #1B6A82; /* dunkler: #082128 oder heller: #1B6A82 */
 	color: #C5C6C6;
 	font-size: 15pt;
 	outline: none;
 	border: none;
 	border-radius: 3px;
+}
+.vertical > .button {
+	width: 100%;
+	height: 3.125rem; /* 50px; */
+	margin: auto;
+	margin-top: 0.625rem; /* 10px; */
+}
+.horizontal > .button {
+    width: 45%;
+    height: 2.7rem;
+    flex: 0 1 auto;
 }
 .button:hover {
 	background-color: #16586B;
