--- a/web/styles.css
+++ b/web/styles.css
@@ -194,7 +194,7 @@ option.option-vers {
 }
 @media screen and (max-width: 500px) {
 	.title {
-		font-size: 0.9em; /* 0.85em; */
+		font-size: 0.85em;
 	    margin-bottom: 0.6rem;
 	}
 	.message {
